# pclog

./: .gitignore  CMakeLists.txt  README.md
include/pc/: log.hpp
include/pclog/: pclog.hpp
source/pc/: log.cpp
source/pclog/: pclog.cpp
tests/: test.cpp
